js/js.translator/testData/incremental/invalidation/modifyClassAncestors/lib/c.7.kt
open class C : B {
    override var p1: String = "H"
    override fun f1(): String = "w"
}